19-06-2005 <Qball> <Qball@qballcow.nl>
	* src/preferences/trayicon.c:	Removed fading of popup. (for
	stability)
	* src/main.h:			Include "../config.h" -> should fix
	NLS stuff and debug compile flag.
	* configure.ac:			Added AM_GNU_GETTEXT([external])  (Is
	this needed?)
	* src/player.c:			Added a function that replaced '\n'
	for window title to ' - ' (fix for bug 435)

08-06-2005 <Qball> <Qball@qballcow.nl>
	* src/tray-icon.c:		Fixed progress bar on dark themes.

07-06-2005 <Qball> <Qball@qballcow.nl>
	* src/id3info.c:		Fixed bug: 440
	* src/id3info.c:		Fixed bug: 443
	* src/preferences.c:		Possible fix for bug: 442
	

06-06-2005 <Qball> <Qball@qballcow.nl>
	* src/main.c:			Fixed one of my annoyances.. the
	playlist reinitializes when opening preferences menu.

04-06-2005 <Qball> <Qball@qballcow.nl>	
	* src/playlist3.c:		Fixed bug that when playlist changes
	the playlist search doesn't update.


02-06-2005 <Qball> <Qball@qballcow.nl>
	* src/player.c:			Don't display *** in title when
	multiline.
	* src/player.c:			Multiline title's that are to width
	arent drawn on the edge anymore. (there now is a 2px left margin)
	* src/main.c:			Fixed bugs that when songs are removed
	at the end of the playlist the playlist isn't updated. 


31-05-2005 <Qball> <Qball@qballcow.nl>
	* src/playlist3.c:		possibly Fixed bug in artist browser that
	caused artist "Eric Clapton" and album "Eric Clapton" didnt work.
	* src/playlist3.c:		Custom browser, support for up to 3
	levels deep.
	* src/main.c:			Removed wrong error message.

28-05-2005 <Qball> <Qball@qballcow.nl>
	* glade/gmpc.glade:		Re-enabled key-bindings.

24-05-2005 <Qball> <Qball@qballcow.nl>
	* src/mpdinteraction.c:		set window title on connect/disconnect
	* src/libmpc.d:			Support for mpdSong call of the window
	* src/playlist3.c:		Support (mpd =0.12) for showing
	id3tags of db items
23-05-2005 <Qball> <Qball@qballcow.nl>
	* src/libmpdclient.[c|h]:	Installed version with qball "advanced
	search and list" functions